# django-peterbecom

./: .dockerignore  .editorconfig  .eslintrc  .flake8  .gitignore  .gitmodules  .travis.yml  Dockerfile  Dockerfile.awspa  Dockerfile.minimalcss  Makefile  Procfile  Procfile.prod  Procfile.tunneling  README  README.md  TODO  constraints.txt  delete-old-static-builds.py  dev-requirements.txt  docker-compose.yml  download-all-plogs.py  download-latest-geolite2.sh  end-to-end.py  justfile  manage.py  middleware.py  package.json  peterbecom.synonyms  pyproject.toml  pytest.ini  redisutils.py  refresh-lyrics-cache.py  reload_and_clear_cache.py  requirements.in  requirements.txt  screenshot.js  stampeding-herd.py  wsgi.py
.github/: dependabot.yml
.github/workflows/: adminui.yml  auto-merge.yml  download-build-stuff.yml  html-getter.yml  js.yml  python.yml  run.yml
.zed/: settings.json
adminui/: README.md  make_build.sh  package.json
adminui/public/: index.html
adminui/src/: AWSPA.js  AWSPABlogitem.js  AWSPAItem.js  AWSPAItems.js  AWSPASearch.js  App.css  App.js  BlogitemHits.js  BlogitemImages.js  Blogitems.js  CDN.js  CommentAutoApproveds.js  CommentCounts.js  Comments.js  Common.js  Config.js  Dashboard.js  EditBlogitem.css  EditBlogitem.js  Editor-overrides.css  GeoComments.js  LyricsPageHealthcheck.js  OpenGraphImageBlogitem.js  PostProcessings.js  Pulse.css  Pulse.js  RealtimeBlogitemHits.js  SearchResults.js  SpamCommentPatterns.js  Store.js  UploadImages.js  WSSContext.js  XCacheAnalyze.js  fetcher.js  index.js  setupProxy.js
apps/: mincss_response.py  rediscounter.py  redisutils.py
apps/homepage/: context_processors.py  feed.py  helpers.py  tests.py  urls.py  utils.py  views.py
apps/legacy/: models.py
apps/plog/: admin.py  forms.py  helpers.py  models.py  raw_data.1333828973.78.json  tasks.py  tests.py  urls.py  utils.py  views.py
apps/stats/: helpers.py  urls.py  views.py
apps/view_cache_utils/: __init__.py  middleware.py  prefix_functions.py
autocompleteserver/: __main__.py  redis_search_index.py  requirements.txt
awspa/: cli.js  package.json  search.js
cdn-crawl/: README.md  cdn-crawler.py
chiveproxy/: README.md  package.json
chiveproxy/src/: App.js  Card.js  Home.js  index.js
minimalcss/: package-lock.json  package.json  run.sh
peterbecom/: brotli_file.py  cache_backends.py  celery.py  compressors.py  conftest.py  disallow_querystrings.py  finders.py  mincss_response.py  minify_html.py  quickmetrics_sender.py  redis_search_index.py  rediscounter.py  storage.py  urls.py  wsgi.py  zopfli_file.py
peterbecom/ajaxornot/: urls.py  views.py
peterbecom/api/: analytics.py  authentication.py  blog_video.py  classification.py  comment_ai.py  forms.py  middleware.py  rewrite.py  serializers.py  spam.py  spellcheck.py  tasks.py  test_analytics.py  test_blogitem.py  test_blogitems.py  test_comments.py  test_images.py  test_lyrics.py  test_spam.py  test_tasks.py  tests.py  thumbnail.py  urls.py  view_utils.py  views.py
peterbecom/api/tests/: test_ai_comment.py  test_analytics.py  test_blogitems.py  test_categories.py  test_cdn.py  test_classification.py  test_comments.py  test_images.py  test_llmcalls.py  test_misc.py  test_rewrite.py  test_spam.py  test_tasks.py  test_video.mov  test_videos.py  test_whoami.py
peterbecom/apps/: mincss_response.py  redis_search_index.py  rediscounter.py  redisutils.py
peterbecom/apps/ajaxornot/: helpers.py  urls.py  views.py
peterbecom/awspa/: apps.py  models.py  search.py  urls.py  views.py
peterbecom/base/: __init__.py  analytics_geo_events.py  analytics_referrer_events.py  apps.py  auth.py  auth_backend.py  basecommand.py  batch_events.py  cdn.py  decorators.py  fscache.py  geo.py  middleware.py  models.py  search.py  songsearch_autocomplete.py  tasks.py  test_fscache.py  test_models.py  test_tasks.py  utils.py  views.py  xcache_analyzer.py
peterbecom/bayes/: guesser.py  models.py
peterbecom/cdnthis/: models.py  urls.py  views.py
peterbecom/chiveproxy/: README.md  apps.py  html-getter.ts  html_getter.py  justfile  models.py  package-lock.json  package.json  puppeteer.py  puppeteer_sucks.js  sucks.py  urls.py  views.py
peterbecom/homepage/: apps.py  base64allimages.py  context_processors.py  feed.py  forms.py  helpers.py  models.py  tasks.py  test_views.py  tests.py  urls.py  utils.py  views.py
peterbecom/json-schemas/: api.v0.blogitem.json  api.v0.blogitems-all.json  api.v0.blogitems.json  api.v0.images.json  api.v0.videos.json
peterbecom/llmcalls/: apps.py  models.py  rewrite.py  tasks.py
peterbecom/localvsxhr/: apps.py  forms.py  urls.py  views.py
peterbecom/minimalcss/: apps.py  models.py  urls.py  views.py
peterbecom/nodomains/: apps.py  count.js  models.py  tasks.py  urls.py  views.py
peterbecom/plog/: admin.py  analytics_to_blogitem_hits.py  apps.py  escape.py  forms.py  gfm.py  helpers.py  models.py  popularity.py  screenshot.py  search.py  spamprevention.py  tasks.py  test_gfm.py  test_models.py  test_utils.py  tests.py  urls.py  utils.py  views.py
peterbecom/podcasttime/: __init__.py  apps.py  forms.py  helpers.py  models.py  scraper.py  search.py  tasks.py  urls.py  utils.py  views.py
peterbecom/publicapi/: apps.py  forms.py  signals.py  tasks.py  urls.py  views.py
peterbecom/settings/: __init__.py  base.py  bundles.py  local.py  test.py  test_settings.py
peterbecom/stats/: urls.py  views.py
peterbecom/templates/: 500.html  base.html
pulse/: index.js  package.json  testsend.js
scripts/: ci-lint.sh  ci-run.sh  ci-test.sh  nltk-downloads.py
songsearch-autocomplete/: README.md  _insert.py  _zopfli.py  insert-local.sh  insert.sh  make_build.sh  package.json
songsearch-autocomplete-preact/: app.js  index.js  package.json  preact.config.js  style.css  template.html
songsearch-autocomplete/public/: index.html
songsearch-autocomplete/src/: App.css  App.js  index.js
uwsgilogs/: analyze.py
(+501 files in other folders)
