[tool.ruff]
exclude = [
    'peterbecom/*/migrations/*',
    'peterbecom/settings/__init__.py',
    'peterbecom/settings/local.py',
    'peterbecom/wsgi.py',
]
line-length = 88

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.
extend-ignore = ["E501"]
extend-select = ["E", "F", "W", "I"]

[tool.uv]
dev-dependencies = []

[project]
name = "django-peterbecom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "backoff==2.2.1",
    "bleach==6.2.0",
    "brotli>=1.1.0",
    "cachetools==6.0.0",
    "cssselect==1.3.0",
    "delegator-py==0.1.1",
    "dj-database-url==2.3.0",
    "django-redis==5.4.0",
    "django==5.2.1",
    "elasticsearch-dsl==8.18.0",
    "elasticsearch==8.17.2",
    "feedparser==6.0.11",
    "ftfy==6.3.1",
    "geoip2==4.8.1",
    "gunicorn==23.0.0",
    "huey==2.5.3",
    "ipaddress==1.0.23",
    "jsonschema==4.24.0",
    "keycdn==0.4.3",
    "lxml==5.4.0",
    "markdown==3.8",
    "mock==5.2.0",
    "mozilla-django-oidc==4.0.1",
    "nltk==3.9.1",
    "optisorl==0.2.1",
    "pillow==11.2.1",
    "profanity==1.1",
    "psycopg2-binary==2.9.10",
    "ptyprocess==0.7.0",
    "py-avataaars==1.1.2",
    "pyquery==2.0.1",
    "pytest-cov==6.1.1",
    "pytest-django==4.11.1",
    "pytest-watch>=4.2.0",
    "python-dateutil==2.9.0.post0",
    "python-decouple==3.8",
    "pytz==2025.2",
    "redis==5.2.1",
    "requests-mock==1.12.1",
    "requests==2.32.3",
    "rollbar==1.3.0",
    "ruff==0.11.12",
    "sorl-thumbnail==12.11.0",
    "sql-metadata==2.17.0",
    "tomli==2.2.1",
    "xmltodict==0.14.2",
    "zope-structuredtext==5.0",
    "zopfli==0.2.3",
    "ffmpeg-python==0.2.0",
]

[tool.coverage.run]
omit = [
    "peterbecom/minimalcss/*",
    "*/migrations/*",
    "peterbecom/plog/management/*",
    "*/management/commands/*",
    "peterbecom/bayes/*",
    "peterbecom/settings/*",
    "peterbecom/chiveproxy/*",
    "peterbecom/conftest.py",
    "*/test_*.py",
]
