[tool.ruff]
exclude = [
    'peterbecom/*/migrations/*',
    'peterbecom/settings/__init__.py',
    'peterbecom/settings/local.py',
    'peterbecom/wsgi.py',
]
line-length = 88

[tool.ruff.lint]

[project]
name = "django-peterbecom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "backoff==2.2.1",
    "bleach==6.2.0",
    "brotli>=1.1.0",
    "cachetools==6.2.1",
    "cssselect==1.3.0",
    "delegator-py==0.1.1",
    "dj-database-url==3.0.1",
    "django-redis==6.0.0",
    "django==5.2.7",
    "elasticsearch-dsl==8.17.1",
    "elasticsearch==8.17.2",
    "feedparser==6.0.12",
    "ftfy==6.3.1",
    "geoip2==4.8.1",
    "gunicorn==23.0.0",
    "huey==2.5.3",
    "ipaddress==1.0.23",
    "jsonschema==4.25.1",
    "keycdn==0.4.3",
    "lxml==6.0.2",
    "markdown==3.9",
    "mock==5.2.0",
    "mozilla-django-oidc==4.0.1",
    "nltk==3.9.2",
    "optisorl==0.2.1",
    "pillow==11.3.0",
    "profanity==1.1",
    "ptyprocess==0.7.0",
    "py-avataaars==1.1.2",
    "pyquery==2.0.1",
    "pytest-cov==7.0.0",
    "pytest-django==4.11.1",
    "pytest-watch>=4.2.0",
    "python-dateutil==2.9.0.post0",
    "python-decouple==3.8",
    "pytz==2025.2",
    "redis==6.4.0",
    "requests-mock==1.12.1",
    "requests==2.32.5",
    "rollbar==1.3.0",
    "ruff==0.14.1",
    "sorl-thumbnail==12.11.0",
    "sql-metadata==2.17.0",
    "tomli==2.2.1",
    "xmltodict==1.0.2",
    "zope-structuredtext==6.0",
    "zopfli==0.2.3",
    "ffmpeg-python==0.2.0",
    "psycopg[binary,pool]>=3.2.9",
    "crawlerdetect>=0.3.0",
    "litellm>=1.79.3",
]

[tool.coverage.run]
omit = [
    "peterbecom/minimalcss/*",
    "*/migrations/*",
    "peterbecom/plog/management/*",
    "*/management/commands/*",
    "peterbecom/bayes/*",
    "peterbecom/settings/*",
    "peterbecom/chiveproxy/*",
    "peterbecom/conftest.py",
    "*/test_*.py",
]
