[tool.ruff]
exclude = [
    'peterbecom/*/migrations/*',
    'peterbecom/settings/__init__.py',
    'peterbecom/settings/local.py',
    'peterbecom/wsgi.py',
]
line-length = 88

[tool.ruff.lint]

[project]
name = "django-peterbecom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "backoff==2.2.1",
    "bleach==6.3.0",
    "brotli==1.2.0",
    "cachetools==7.0.1",
    "cssselect==1.3.0",
    "delegator-py==0.1.1",
    "dj-database-url==3.1.0",
    "django-redis==6.0.0",
    "django==6.0.1",
    "feedparser==6.0.12",
    "ftfy==6.3.1",
    "geoip2==4.8.1",
    "gunicorn==24.1.1",
    "huey==2.6.0",
    "ipaddress==1.0.23",
    "jsonschema==4.26.0",
    "keycdn==0.4.3",
    "lxml==6.0.2",
    "markdown==3.10.1",
    "mock==5.2.0",
    "mozilla-django-oidc==5.0.2",
    "nltk==3.9.2",
    "optisorl==0.2.1",
    "pillow==12.1.0",
    "profanity==1.1",
    "ptyprocess==0.7.0",
    "py-avataaars==1.1.2",
    "pyquery==2.0.1",
    "pytest-cov==7.0.0",
    "pytest-django==4.11.1",
    "pytest-watch>=4.2.0",
    "python-dateutil==2.9.0.post0",
    "python-decouple==3.8",
    "pytz==2025.2",
    "redis==7.1.0",
    "requests-mock==1.12.1",
    "requests==2.32.5",
    "rollbar==1.3.0",
    "ruff==0.14.14",
    "sorl-thumbnail==12.11.0",
    "sql-metadata==2.19.0",
    "tomli==2.4.0",
    "xmltodict==1.0.2",
    "zope-structuredtext==6.0",
    "zopfli==0.4.0",
    "ffmpeg-python==0.2.0",
    "psycopg[binary,pool]>=3.2.9",
    "crawlerdetect>=0.3.0",
    "litellm==1.81.3",
]

[tool.coverage.run]
omit = [
    "peterbecom/minimalcss/*",
    "*/migrations/*",
    "peterbecom/plog/management/*",
    "*/management/commands/*",
    "peterbecom/bayes/*",
    "peterbecom/settings/*",
    "peterbecom/chiveproxy/*",
    "peterbecom/conftest.py",
    "*/test_*.py",
]
